--- a/HELP/Base.lproj/Main.storyboard
+++ b/HELP/Base.lproj/Main.storyboard
@@ -58,6 +58,9 @@
                                 <state key="normal" title="Машина прибыла">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="carArrived:" destination="kV8-F7-sN7" eventType="touchUpInside" id="c5y-zC-Dmw"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HO2-Jg-N0B">
                                 <rect key="frame" x="20" y="418" width="280" height="55"/>
